[package]
name = "ununi"
version = "0.3.0"
authors = ["Andrew <andrew.pa@outlook.com>"]

[dependencies]
tantivy = { git = "https://github.com/tantivy-search/tantivy" }
xml-rs = "0.6"
winapi = "0.2"
user32-sys = "0.1"
kernel32-sys = "0.2"
ole32-sys = "0.2"
advapi32-sys = "0.2"
curl = "0.4"
zip = "0.2"
