[package]
name = "ununi"
version = "0.4.9"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]

[dependencies]
tantivy = "0.12" 
xml-rs = "0.8"
curl = "0.4"
zip = "0.5"
toml = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "d2d1", "dwrite", "windowsx", "impl-default"] }
